Form values are now saved to new objects and cards

--- a/src/style.css
+++ b/src/style.css
@@ -7,4 +7,9 @@ body {
     width: 250px;
     background: white;
     border: 2px solid black;
+    display: grid;
+}
+
+form {
+    display: grid;
 }
