--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,7 @@ header>button{
 
 .content>[class*='NewProj']>h3 {
     margin: 0;
+    width: 100%;
     text-align: center;
 }
 
@@ -71,7 +72,10 @@ header>button{
 
 [class*='firstItem'], [class*='secondItem'], [class*='thirdItem'] {
     height: 1em;
+    width: 100%;
     text-align: center;
+    border-bottom: 1px solid black;
+    padding: 0.5em;
 }
 
 form {
@@ -128,37 +132,44 @@ hr{
     justify-content: space-around;
     justify-items: center;
     align-content: space-between;
-    min-height: 10vh;
+    min-height: 7vh;
     max-height: fit-content;
     border-radius: 12px;
     padding: 0.5rem;
     text-align: center;
+    min-width: 150px;
 }
 .descVal {
     display: flex;
-    overflow-y: scroll;
+   overflow-wrap:break-word;
+   overflow-y: scroll;
+   max-height: 51px;
+
     flex-grow: 0;
 }
 [class*='NewCard']>h3 {
     width: 100%;
+    margin: 0;
     text-align: center;
+}
+[class*='NewCard']>button {
+    border-radius: 12px;
+    width: max-content;
 }
 
 .description, .priority, .date {
     width: 100%;
+    display: flex;
+   justify-content: space-between;
+   border-bottom: 2px dotted grey;
+  
 }
 
 .description {
     display: flex;
-    gap: 2rem;
-}
-.priority {
-    display: flex;
-    gap: 5rem;
-    
+   justify-content: space-between;
 }
 
-.prioVal {
-    display: flex;
-    
+.descTemp, .prioTemp, .dateTemp {
+    font-weight: bold;
 }
