--- a/src/style.css
+++ b/src/style.css
@@ -8,15 +8,26 @@ body {
 
 }
 
+h1 {
+    margin: 0;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
 header {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap:1rem;
    
 }
 
 header>button{
+    font-size: 1rem;
+    
     border-radius: 12px;
 }
 
