--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,10 @@ body {
     align-items: center;
     background-color: rgb(150, 150, 150);
     justify-content: center;
-  
-
+    margin: 0;
+    padding: 0;
 }
+
 
 h1 {
     margin: 0;
@@ -14,6 +15,8 @@ h1 {
 
 button:hover {
     cursor: pointer;
+    background-color: black;
+    color: white;
 }
 
 header {
@@ -21,21 +24,32 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap:1rem;
+    gap:2rem;
+    background-color: white;
+    width: 100vw;
+    padding-bottom: 1em;
    
 }
 
 header>button{
     font-size: 1rem;
-    
+    border: 0;
+    font-weight: bold;
     border-radius: 12px;
+    border-bottom: 2px solid black;
 }
 
+button {
+    border: 0;
+    font-weight: bold;
+    
+}
 .content {
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 0.2fr));
-    gap: 2rem;
+    width: 100vw;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 0.1fr));
+    gap: 1rem;
 }
 
 .content>div {
@@ -51,20 +65,26 @@ header>button{
     flex-wrap: wrap;
     justify-content: center;
     align-content: space-between;
-    min-height: 10vh;
+    min-height: 14vh;
     max-height: 15vh;
     border-radius: 12px;
     padding: 0.5rem;
 }
 
 .OpenProject {
-   width: 50%;
+   width: 45%;
    height: 75%;
+   margin-right: 10px;
+   background-color: rgba(1, 255, 1, 0.37);
 }
 
 .DeleteProject {
-    width: 50%;
+    width: 45%;
     height: 75%;
+ }
+
+ .Delete, .DeleteProject {
+    background-color: rgba(255, 145, 0, 0.986);
  }
 
 .content>[class*='NewProj']>h3 {
@@ -79,9 +99,14 @@ header>button{
     justify-items: center;
     border-radius: 12px;
     margin-bottom: 0.25rem;
+    border-bottom: 2px solid black;
 }
 
+.projectTitle {
+    overflow: hidden;
+}
 [class*='firstItem'], [class*='secondItem'], [class*='thirdItem'] {
+    overflow: hidden;
     height: 1em;
     width: 100%;
     text-align: center;
@@ -90,12 +115,12 @@ header>button{
 }
 
 form {
-
+    margin-top: 1rem;
     display: grid;
     visibility: hidden;
     height: 0;
     border-radius: 12px;
-    border: 5px solid black;
+    border: 2px solid black;
     padding: 0.5rem;
     justify-items: center;
     gap: 0.4rem;
@@ -130,6 +155,7 @@ form>input, form>textarea{
 }
 #submitForm, #resetForm {
     border-radius: 12px;
+    padding:0.5em;
 }
 
 hr{
@@ -165,8 +191,24 @@ hr{
 }
 [class*='NewCard']>button {
     border-radius: 12px;
-    width: max-content;
+    width: 4rem;
+    height:2rem;
+    border: 0;
+    font-weight: bold;
+    border-bottom: 2px solid black;
 }
+.Delete:hover {
+    background-color: black;
+    color: rgb(255, 0, 0)
+}
+
+[class*='NewCard']>button:hover {
+    border-bottom: 5px solid black;
+    background-color: black;
+    color: white;
+}
+
+
 
 .description, .priority, .date {
     width: 100%;
