--- a/src/style.css
+++ b/src/style.css
@@ -2,10 +2,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(150, 150, 150);
+    background-color: rgb(10, 10, 10);
     justify-content: center;
     margin: 0;
     padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
 }
 
 
@@ -15,8 +17,9 @@ h1 {
 
 button:hover {
     cursor: pointer;
-    background-color: black;
+    background-color: rgb(35, 35, 35);
     color: white;
+    border: 1px solid white;
 }
 
 header {
@@ -25,8 +28,9 @@ header {
     justify-content: center;
     align-items: center;
     gap:2rem;
-    background-color: white;
+    background-color: rgb(56, 56, 56);
     width: 100vw;
+    color: white;
     padding-bottom: 1em;
    
 }
@@ -54,7 +58,7 @@ button {
 
 .content>div {
     height: 300px;
-    background: white;
+    background: rgb(35, 35, 35);
     border: 2px solid black;
     display: grid;
 }
@@ -67,7 +71,9 @@ button {
     align-content: space-between;
     min-height: 14vh;
     max-height: 15vh;
-    border-radius: 12px;
+    border-radius: 25px 50px 50px 25px;
+    border-right: 21px solid white;
+
     padding: 0.5rem;
 }
 
@@ -81,16 +87,19 @@ button {
 .DeleteProject {
     width: 45%;
     height: 75%;
+    
  }
 
  .Delete, .DeleteProject {
     background-color: rgba(255, 145, 0, 0.986);
+    
  }
 
 .content>[class*='NewProj']>h3 {
     margin: 0;
     width: 100%;
-    text-align: center;
+    padding-left: 15px;
+    text-align: left;
 }
 
 .content>[class*='NewProj']>button {
@@ -99,18 +108,19 @@ button {
     justify-items: center;
     border-radius: 12px;
     margin-bottom: 0.25rem;
-    border-bottom: 2px solid black;
+ 
 }
 
 .projectTitle {
     overflow: hidden;
+    
 }
 [class*='firstItem'], [class*='secondItem'], [class*='thirdItem'] {
     overflow: hidden;
     height: 1em;
     width: 100%;
     text-align: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(255, 255, 255);
     padding: 0.5em;
 }
 
@@ -119,12 +129,12 @@ form {
     display: grid;
     visibility: hidden;
     height: 0;
-    border-radius: 12px;
+    border-radius: 55px;
     border: 2px solid black;
     padding: 0.5rem;
     justify-items: center;
     gap: 0.4rem;
-    background-color: blanchedalmond;
+    background-color: rgb(56, 56, 56);
     margin-bottom: 2rem;
 }
 
@@ -160,6 +170,12 @@ form>input, form>textarea{
 
 hr{
     width: 300px;
+    display:block;
+    height:1px;
+    border: 0;
+    border-top: 1px solid white;
+    margin: 1em 0;
+    padding: 0;
 }
 
 .content>[class*='NewCard'] {
@@ -171,31 +187,30 @@ hr{
     align-content: space-between;
     min-height: 7vh;
     max-height: fit-content;
-    border-radius: 12px;
+    border: 0;
+    border-radius: 25px 50px 50px 25px;
+    border-right: 21px solid #ffffff;
     padding: 0.5rem;
     text-align: center;
     min-width: 150px;
 }
 .descVal {
     display: flex;
-   overflow-wrap:break-word;
-   overflow-y: scroll;
-   max-height: 51px;
-
+    overflow: hidden;
+    max-height: 51px;
     flex-grow: 0;
 }
 [class*='NewCard']>h3 {
     width: 100%;
     margin: 0;
-    text-align: center;
+    text-align: left;
 }
 [class*='NewCard']>button {
-    border-radius: 12px;
-    width: 4rem;
+    border-radius: 55px;
+    width: 3rem;
     height:2rem;
     border: 0;
     font-weight: bold;
-    border-bottom: 2px solid black;
 }
 .Delete:hover {
     background-color: black;
@@ -203,9 +218,10 @@ hr{
 }
 
 [class*='NewCard']>button:hover {
-    border-bottom: 5px solid black;
-    background-color: black;
+    background-color: rgb(35, 35, 35);
     color: white;
+    border: 1px solid white;
+    
 }
 
 
@@ -225,4 +241,9 @@ hr{
 
 .descTemp, .prioTemp, .dateTemp {
     font-weight: bold;
+}
+
+.dateVal {
+    font-weight: bold;
+    color: rgb(255, 196, 0);
 }
